python/testData/highlighting/malformedStringUnterminated.py
# missing last quote, plain
<error descr="Missing closing quote [']">'abc</error>